@@ -4,3 +4,5 @@ context-provider-schema.html
 context-properties.html
 contextkit.html
 core-types.html
+context-properties.txt
+core-types.txt
