@@ -5,10 +5,12 @@ contextkit (0.5.1~unreleased) unstable; urgency=low
   * context-listen uses JSon for output.
   * Depends on libqjson-dev version 0.6.3-6 at least, which contains a needed
     workaround for QVariant::setValue().
+  * Build system fixes. (Fixes: NB#147530, NB#147531, NB#147532, MB#5899,
+    MB#5996, MB#6025)
 
   Implemented: Swp#CntFr-322
 
- -- Akos PASZTORY <ext-akos.pasztory@nokia.com>  Wed, 18 Nov 2009 14:14:14 +0200
+ -- Gergely Risko <gergely+context@risko.hu>  Fri, 20 Nov 2009 15:15:46 +0200
 
 contextkit (0.5) unstable; urgency=low
 
